@@ -1,3 +1,8 @@
+2007-06-18  Ross Burton  <ross@burtonini.com>
+
+	* libjuicer/sj-metadata-musicbrainz.c:
+	Correctly lookup the album artist (#393707).
+
 2007-06-15  Ross Burton  <ross@burtonini.com>
 
 	* src/sj-play.c:
